# espanso

./: SECURITY.md
.github/workflows/: ci.yml  dev-release.yml  update-flake.yml
espanso-clipboard/src/cocoa/: mod.rs  native.mm
espanso-clipboard/src/win32/: mod.rs
espanso-clipboard/src/x11/xclip/: mod.rs
espanso-detect/src/mac/: native.mm
espanso-engine/src/process/middleware/: disable.rs  matcher.rs
espanso-info/src/cocoa/: native.mm
espanso-inject/src/evdev/: mod.rs
espanso-inject/src/mac/: mod.rs  native.mm
espanso-inject/src/win32/: mod.rs
espanso-inject/src/x11/default/: mod.rs
espanso-mac-utils/src/: native.mm
espanso-modulo/: Cargo.toml  build.rs
espanso-modulo/src/sys/search/: search.cpp
espanso-package/: Cargo.toml
espanso-package/src/provider/: github.rs
espanso-render/: Cargo.toml
espanso-render/src/extension/: choice.rs  form.rs
espanso-ui/src/linux/: mod.rs
espanso-ui/src/mac/: native.mm
espanso/src/cli/service/: macos.rs
espanso/src/cli/worker/engine/process/middleware/: disable.rs
espanso/src/path/: macos.rs
espanso/src/res/linux/: espanso.desktop
