[package]
name = "espanso-render"
version = "0.1.0"
authors = ["Federico Terzi <federico-terzi@users.noreply.github.com>"]
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono-tz.workspace = true
chrono.workspace = true
enum-as-inner.workspace = true
log.workspace = true
regex.workspace = true
thiserror.workspace = true
rand = "0.8.6"
sys-locale = "0.1.0"

[lints]
workspace = true
